--- a/image_explanation.ipynb
+++ b/image_explanation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "d16c1e33",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "cf200c0c",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "d7d006e4",
    "metadata": {},
    "outputs": [],
@@ -49,17 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "632d2b21",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ChatCompletion(id='chatcmpl-C6rGk7qTQ6YVmHaqUrZyGH1Ejnj2u', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='이미지에는 한 여성이 주방에서 요리 준비를 하고 있는 모습이 있습니다. 그녀는 블랙 스포츠 브라와 레깅스를 입고 있으며, 휘핑기를 사용해 파란색 그릇 속의 달걀을 휘젓고 있습니다. 옆에는 팬에 베이컨이 구워지고 있는 것이 보입니다. 그녀는 미소를 지으며 즐거운 모습입니다.', refusal=None, role='assistant', audio=None, function_call=None, tool_calls=None, annotations=[]))], created=1755750770, model='gpt-4o-2024-08-06', object='chat.completion', service_tier='default', system_fingerprint='fp_80956533cb', usage=CompletionUsage(completion_tokens=90, prompt_tokens=1119, total_tokens=1209, completion_tokens_details=CompletionTokensDetails(accepted_prediction_tokens=0, audio_tokens=0, reasoning_tokens=0, rejected_prediction_tokens=0), prompt_tokens_details=PromptTokensDetails(audio_tokens=0, cached_tokens=0)))"
+       "ChatCompletion(id='chatcmpl-C6uRDsvmt8Z6XOrRLCDbU0e1EV1lX', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='이 음식은 떡볶이로 보입니다. 떡볶이의 가격은 장소와 재료, 그리고 판매하는 매장에 따라 다를 수 있습니다. 길거리에서 파는 떡볶이는 보통 저렴하며, 한 접시에 약 3,000원에서 5,000원 사이일 수 있습니다. 레스토랑이나 카페에서는 추가 재료나 서비스에 따라 더 높은 가격을 받을 수 있습니다. 구체적인 가격은 방문하는 장소에 따라 다를 수 있으니 참고하세요.', refusal=None, role='assistant', audio=None, function_call=None, tool_calls=None, annotations=[]))], created=1755762951, model='gpt-4o-2024-08-06', object='chat.completion', service_tier='default', system_fingerprint='fp_80956533cb', usage=CompletionUsage(completion_tokens=113, prompt_tokens=271, total_tokens=384, completion_tokens_details=CompletionTokensDetails(accepted_prediction_tokens=0, audio_tokens=0, reasoning_tokens=0, rejected_prediction_tokens=0), prompt_tokens_details=PromptTokensDetails(audio_tokens=0, cached_tokens=0)))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
